[project]
name = 'muos-app-pokemon-randomizer'
authors = [
    {name = 'Sergio Bugallo', email = 'sergiobugalloenjamio@gmail.com'},
]
dynamic = ["version"]
readme = "README.md"
description = 'muOS app to randomize GB, GBC and GBA Pokémon ROMS.'

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = true
strict_equality = true


[tool.ruff]
line-length = 100